src/styles/sections/header.scss
body {
  padding-top: 40px;

  @media screen and (min-width: $tablet) {
    padding-top: 60px;
  }

  &.announcement-visible {
    padding-top: 80px;

    @media screen and (min-width: $tablet) {
      padding-top: 90px;
    }
  }
}

.announcement-visible .navbar .nav-drop {
  position: absolute;
  top: 80px;

  @media screen and (min-width: $tablet) {
    top: 90px;
  }
}

.navbar .nav-drop {
  position: absolute;
  top: 40px;

  @media screen and (min-width: $tablet) {
    top: 60px;
  }
}

.navbar {
  overflow-y: visible;
  background: none;

  &.scrollable {
    overflow-y: scroll;
    overflow-x: hidden;
    height: 100%;
  }

  .height-enter-active, .height-leave-active {
    transition: height 0.3s linear;
    overflow: hidden;
  }

  .fade-enter-active, .fade-leave-active {
    transition: opacity .3s linear;
  }

  .fade-enter, .fade-leave-to {
    opacity: 0;
  }
}

.navbar > .announcement {
  background-color: #ffd828;

  .container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    height: 100%;
    min-height: 40px;
    align-items: center;

    @media screen and (min-width: $tablet) {
      min-height: unset;
    }
  }

  .text-wrap {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 20px;
    width: 100%;

    &:first-child {
      margin-right: 30px;
    }

    @media screen and (min-width: $tablet) {
      height: 30px;
      display: inline-flex;
      width: auto;
    }
  }

  .close {
    position: absolute;
    top: 0;
    right: 0;
    width: 30px;
    height: 30px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    font-size: 12px;
    color: white;
    padding-right: 15px;

    &:hover {
      color: white;
    }
  }

  .announcement-icon {
    height: 17px;
    margin-right: 8px;
    display: none;

    @media screen and (min-width: $tablet) {
      display: flex;
      justify-content: center;
    }
  }

  p {
    display: inline;
    font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
    margin-bottom: 0;
    letter-spacing: 0;
    font-size: 12px;
    line-height: 16px;
  }
}

.navbar > .menu {
  background: white;
  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.15);
  margin-bottom: 10px;

  .container {
    align-items: stretch;
    display: flex;
    width: 100%;
    min-height: 40px;
    height: 40px;

    @media screen and (min-width: $tablet) {
      min-height: 3.25rem;
      height: 60px;
    }
  }

  .navbar-brand {
    min-height: 40px;

    img {
      height: 20px;
      max-height: 35px;

      @media screen and (min-width: $tablet) {
        height: auto;
      }
    }
  }

  .navbar-brand, .navbar-menu {
    font-family: "neuzeitgroteskblack";
    font-size: 17px;
  }

  .navbar-menu {
    margin-left: 60px;
  }

  .navbar-icons {
    flex-grow: 1;
    display: flex;
    flex-shrink: 0;
    justify-content: flex-end;

    .navbar-item:hover {
      border-bottom: 1px solid transparent;
      color: white;
    }

    .navbar-item.search {
      img {
        padding: 3px;
      }

      @media screen and (min-width: $tablet) {
        display: none;
      }
    }

    .navbar-item {
      font-family: "neuzeit_grotesk_regular";
      color: white;
      padding-top: 5px;
      padding-bottom: 5px;

      @media screen and (min-width: $tablet) {
        padding-top: 12px;
        padding-bottom: 8px;
      }

      .cart-count {
        position: absolute;
        bottom: 3px;
        right: 17px;

        @media screen and (min-width: $tablet) {
          bottom: 10px;
        }
      }
    }
  }

  .navbar-item {
    max-height: 40px;
    padding-top: 12px;
    color: #606060;
    border-bottom: 1px solid transparent;

    @media screen and (min-width: $tablet) {
      max-height: none;
    }

    &:hover {
      border-bottom: solid 1px #606060;
      color: #008ffd;
      background: none;
    }

    .icon-down-arrow {
      font-size: 12px;
      line-height: 13px;
      margin-left: 6px;
    }
  }

  .navbar-item.mobile {
    display: flex;
    width: 100px;
    margin-left: 60px;
    border-bottom: none;
    background-color: #0090fc;
    font-size: 14px;
    letter-spacing: 1px;
    color: white;

    @media screen and (min-width: $tablet) {
      display: none;
    }

    &:hover {
      background-color: #0090fc;
    }
  }

  .navbar-item.logo {
    padding-top: 8px;

    &:hover {
      border-bottom: 1px solid transparent;
    }
  }
}

.navbar > .mega-drop.mobile {
  background-color: white;
  opacity: 0.95;
  border-top: 1px solid #ccc;

  @media screen and (min-width: $tablet) {
    display: none;
  }

  &.fade-enter, &.fade-leave-to {
    opacity: 0;
  }

  .columns {
    padding: 0 10px;

    .item {
      display: block;
      padding: 9px 15px;
      text-align: center;
      color: #606060;

      img {
        max-width: 70%;
      }

      h3 {
        font-family: "neuzeit_grotesk_regular";
        font-size: 18px;

        @media screen and (min-width: $large-phone) {
          font-size: 22px;
          font-weight: bold;
        }
      }

      p {
        font-family: "sf_display_regular";
        font-size: 17px;
      }
    }
  }

  .menu {
    font-family: "neuzeitgroteskblack";
    font-size: 15px;
    letter-spacing: 1px;

    li {
      text-align: center;
      border-bottom: 1px solid #efefef;
    }

    a {
      color: #606060;
      padding: 9px 15px;
      display: block;

      &:hover {
        color: #008ffd;
      }
    }

    .icon-down-arrow {
      font-size: 12px;
      position: absolute;
      padding-top: 3px;
      padding-left: 5px;
    }

    .more li {
      background-color: #e5e5e5;
    }
  }
}

.navbar > .mega-drop.desktop {
  display: flex;
  justify-content: center;
  background-color: white;
  height: 240px;

  .item {
    padding: 15px 40px 30px 40px;
    text-align: center;
    color: #0080ce;

    img {
      height: 100px;
    }

    h3 {
      padding-top: 10px;
      font-family: "neuzeitgroteskblack";
      font-size: 16px;
      line-height: 18px;
      font-weight: 700;
      letter-spacing: -0.1px;
    }

    p {
      font-family: "neuzeitgroteskblack";
      font-size: 13px;
      line-height: 16px;
      letter-spacing: -0.1px;
    }
  }
}

.navbar > .search {
  border-top: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
  margin-bottom: 30px;
  background-color: white;
  padding: 30px 20px;

  @media screen and (min-width: $tablet) {
    display: none;
  }

  input {
    border: none;
    border-radius: 0px;
    border-bottom: 1px solid #606060;
    font-size: 22px;
    font-family: sf_display_regular;
    box-shadow: none;

    &:active {
      box-shadow: none;
    }
  }

  .icon-search {
    font-size: 22px;
    height: 100%;
    background: none;
    border: none;
  }
}

.navbar .cart-detail {
  display: flex;
  justify-content: flex-end;
  position: absolute;
  top: 40px;

  @media screen and (min-width: $tablet) {
    top: 60px;
  }

  .drawer {
    background-color: white;
    border: 1px solid #ccc;
    width: 320px;
    max-height: 70vh;
    overflow-y: auto;

    @media screen and (min-width: $large-phone) {
      width: 360px;
    }
  }

  .empty {
    font-family: neuzeit_grotesk_regular;
    font-weight: bold;
    font-size: 18px;
    text-align: center;
    padding: 40px 0px;
  }

  .continue-shopping {
    display: block;
    color: #333333;
    font-family: "sf_display_regular";
    font-size: 13px;
    padding: 15px 0;
    text-align: center;
    border-bottom: 1px solid #cccccc
  }

  ul {
    padding: 15px 20px;
  }

  .cart-item {
    font-family: "neuzeit_grotesk_light";
    display: flex;
    flex-wrap: wrap;
    padding-bottom: 10px;
    margin-bottom: 10px;
    border-bottom: 1px solid #cccccc;

    &:last-child {
      border-bottom: 0px;
      padding-bottom: 0px;
      margin-bottom: 0px;
    }

    a {
      display: flex;
      width: 100%;
    }

    .image {
      max-width: 60px;
      min-width: 60px;
      padding-right: 10px;

      @media screen and (min-width: $large-phone) {
        min-width: 100px;
        max-width: 100px;
      }
    }

    .title {
      width: 130px;
      font-weight: normal;
      letter-spacing: 1;
      font-size: 13px;
      line-height: 1.6em;
    }

    .price {
      color: #333333;
      display: flex;
      flex-grow: 1;
      justify-content: flex-end;
      font-size: 13px;
      font-weight: 700;
      letter-spacing: 1px;

      @media screen and (min-width: $large-phone) {
        font-size: 18px;
      }
    }

    .quantity {
      padding-left: 70px;
      margin-top: -12px;
      margin-bottom: 10px;

      @media screen and (min-width: $large-phone) {
        padding-left: 110px;
        margin-top: -30px;
      }

      input {
        height: 30px;
        font-size: 15px;
        width: 40px;
        text-align: center;
      }

      a {
        height: 30px;
        width: 32px;
        font-size: 12px;
        background-color: #f2f2f2;
        padding: 0px;
        font-weight: 300;
      }
    }
  }

  .foot {
    border-top: 1px solid #aaaaaa;
    padding: 25px 20px 40px 20px;
    font-family: "neuzeit_grotesk_light";
    font-weight: bold;
    font-size: 13px;

    .subtotal {
      margin-bottom: 12px;
    }

    a {
      font-weight: bold;
      letter-spacing: 1.2px;
      height: 40px;
      width: 260px;
      line-height: 1.2;
      text-transform: uppercase;
      font-size: 14px;
      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
      background-color: #008ffd;
      border-color: #008ffd;
      color: white;
    }
  }
}

